--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">Spring</a>
+                        <a class="navbar-brand" href="#"><img src="./images/logo.jpg" alt="logo"></a>
                     </div>
                     <div class="collapse navbar-collapse" id="sp-navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
@@ -34,46 +34,48 @@
                 <h4 class="text-dgrey text-descr">We will ask you a few question to get a sense of your health and understand <br>any problem you may be having. We keep your  information secure and <br>confidentials</h4>
             </div>
             <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-md-offset-6">
-                        <form class="form-horizontal">
-                            <div class="sp-fsection">
-                                <div class="row">
-                                    <div class="form-group sp-fgroup">
-                                        <div class="col-md-6">
-                                            <input type="text" class="col-md-6 form-control sp-fcontrol" placeholder="First Name">
+                <div class="page-main">
+                    <div class="row">
+                        <div class="col-md-6 col-md-offset-6">
+                            <form class="form-horizontal">
+                                <div class="sp-fsection">
+                                    <div class="row">
+                                        <div class="form-group sp-fgroup">
+                                            <div class="col-md-6">
+                                                <input type="text" class="col-md-6 form-control sp-fcontrol" placeholder="First Name">
+                                            </div>
+                                            <div class="col-md-6">
+                                                <input type="text" class="col-md-6 form-control sp-fcontrol" placeholder="Last Name">
+                                            </div>
                                         </div>
-                                        <div class="col-md-6">
-                                            <input type="text" class="col-md-6 form-control sp-fcontrol" placeholder="Last Name">
-                                        </div>
-                                    </div>
 
+                                    </div>
+                                    <div class="form-group sp-fgroup">
+                                        <input type="phone" class="form-control sp-fcontrol" placeholder="Phone Number">
+                                    </div>
+                                    <div class="form-group sp-fgroup">
+                                        <input type="email" class="form-control sp-fcontrol" placeholder="email.com">
+                                    </div>
+                                    <div class="form-group sp-fgroup">
+                                        <input type="password" class="form-control sp-fcontrol" placeholder="Password">
+                                    </div>
                                 </div>
-                                <div class="form-group sp-fgroup">
-                                    <input type="phone" class="form-control sp-fcontrol" placeholder="Phone Number">
+                                <div class="sp-fsection">
+                                    <p class="text-sm sp-fcheck">
+                                        <input type="checkbox" class="sp-fchk" id="chk-toc">
+                                        <label for="chk-toc">I have read and understood Spring's Terms of Service and HIPAA Notice</label>
+                                    </p>
+                                    <p class="text-sm sp-fcheck">
+                                        <input type="checkbox" class="sp-fchk" id="chk-privacy">
+                                        <label for="chk-privacy">I consent to Spring's Privacy Policy</label>
+                                    </p>
                                 </div>
-                                <div class="form-group sp-fgroup">
-                                    <input type="email" class="form-control sp-fcontrol" placeholder="email.com">
+                                <div class="sp-fsection">
+                                    <button type="button" class="btn sp-btn btn-prim">Create my account</button>
+                                    <span class="sp-inl-right text-sm">Already have an account? <a href="#">Log in</a></span>
                                 </div>
-                                <div class="form-group sp-fgroup">
-                                    <input type="password" class="form-control sp-fcontrol" placeholder="Password">
-                                </div>
-                            </div>
-                            <div class="sp-fsection">
-                                <p class="text-sm sp-fcheck">
-                                    <input type="checkbox" class="sp-fchk" id="chk-toc">
-                                    <label for="chk-toc">I have read and understood Spring's Terms of Service and HIPAA Notice</label>
-                                </p>
-                                <p class="text-sm sp-fcheck">
-                                    <input type="checkbox" class="sp-fchk" id="chk-privacy">
-                                    <label for="chk-privacy">I consent to Spring's Privacy Policy</label>
-                                </p>
-                            </div>
-                            <div class="sp-fsection">
-                                <button type="button" class="btn sp-btn btn-prim">Create my account</button>
-                                <span class="sp-inl-right text-sm">Already have an account? <a href="#">Log in</a></span>
-                            </div>
-                        </form>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
